k8s-ngrok.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: local-repository-controller-webhook
webhooks:
- clientConfig:
  # ngrok cabundle
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlGcXpDQ0JKT2dBd0lCQWdJUURITW1IVnRRYmdwZGRocWhDUllpbVRBTkJna3Foa2lHOXcwQkFRc0ZBREJlDQpNUXN3Q1FZRFZRUUdFd0pWVXpFVk1CTUdBMVVFQ2hNTVJHbG5hVU5sY25RZ1NXNWpNUmt3RndZRFZRUUxFeEIzDQpkM2N1WkdsbmFXTmxjblF1WTI5dE1SMHdHd1lEVlFRREV4UlNZWEJwWkZOVFRDQlNVMEVnUTBFZ01qQXhPREFlDQpGdzB4T0RBek1USXdNREF3TURCYUZ3MHhPVEF6TVRJeE1qQXdNREJhTUJVeEV6QVJCZ05WQkFNTUNpb3VibWR5DQpiMnN1YVc4d2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURwSDlJbDZrUU05Y3JPDQpaaVJxeT [...]
    # caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU0akNDQXNxZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFSTVE4d0RRWURWUVFERXdaeWIyOTAKWTJFd0hoY05NVGd3T0RFME1UVXhOREF4V2hjTk1qQXdNakUwTVRVeE5EQXhXakFSTVE4d0RRWURWUVFERXdaeQpiMjkwWTJFd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUNEd0F3Z2dJS0FvSUNBUURJL2NCa3U3a21SR090Cm0rcEZNZVd5MUh5UG0zSFBZUzZ6ekJBNGt0c1JkejZ6WGFyOWVJVDFudUt1bC9melF6NHRRSUlNZE5hRmZHaWsKSUVjSU5odlo2RHJIcWtEU2xIa3YzT0Vwc2ZIYkdCcGZyaDM4NHBPREZ2YWpmcWx5QnZ3WGFRZ2xiUWZaU0dxYgpVN3FRa1VFSFRI [...]
    # service: 
    #   name: local-repository-controller-service
    #   namespace: default
    url:  https://1eafed28.ngrok.io/pod
  failurePolicy: Fail
  name: ad8659da.ngrok.io
  namespaceSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
