k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-repository-controller-deployment
  labels:
    app: local-repository-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: local-repository-controller
  template:
    metadata:
      labels:
        app: local-repository-controller
    spec:
      containers:
      - name: controller
        image: lawrencegripper/local-repository
        ports:
        - containerPort: 443
          name: https
---
apiVersion: v1
kind: Service
metadata:
  name: local-repository-controller-service
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: https
  selector:
    app: local-repository-controller
  type: LoadBalancer
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: local-repository-controller-webhook
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU0akNDQXNxZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFSTVE4d0RRWURWUVFERXdaeWIyOTAKWTJFd0hoY05NVGd3T0RFME1UVXhOREF4V2hjTk1qQXdNakUwTVRVeE5EQXhXakFSTVE4d0RRWURWUVFERXdaeQpiMjkwWTJFd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUNEd0F3Z2dJS0FvSUNBUURJL2NCa3U3a21SR090Cm0rcEZNZVd5MUh5UG0zSFBZUzZ6ekJBNGt0c1JkejZ6WGFyOWVJVDFudUt1bC9melF6NHRRSUlNZE5hRmZHaWsKSUVjSU5odlo2RHJIcWtEU2xIa3YzT0Vwc2ZIYkdCcGZyaDM4NHBPREZ2YWpmcWx5QnZ3WGFRZ2xiUWZaU0dxYgpVN3FRa1VFSFRIQ2 [...]
    service: 
      name: local-repository-controller-service
      namespace: default
  failurePolicy: Fail
  name: local-repository-controller-service.default.svc.cluster.local
  namespaceSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
